# Xenia26

./: .gitignore  EMAIL_GENERATOR_TESTING.md  INTEGRATION_GUIDE.md  PROJECT_ARCHITECTURE.md  QUICKSTART_FULLSTACK.md  README.md  STREAMING_FEATURES.md  regex_test.py  test_agent_full.py  test_agent_robustness.py  test_regex_fix.py  test_search.py
Frontend/: FRONTEND_ARCHITECTURE.md  README.md  UI_IMPROVEMENT_AGENT_PANEL.md  index.html  package-lock.json  (+2 more)
fastapi/: .env  .env.example  AGENT_BEHAVIOR_FIX.md  AGENT_RESPONSE_QUALITY.md  CHANGING_DEFAULT_MODEL.md  CRAWLER_README.md  DEPENDENCY_FIX.md  POSTMAN_GUIDE.md  QUICKSTART.md  agent_server.py  hyper_out.txt  langgraph.json  linkedin_cookies.json  main.py  pyproject.toml  repro_github_fix.py  reproduce_tool_call.py  test_agent_graph.py  test_all_crawlers.py  test_github.py  test_linkedin.py  test_performance.py  test_sqlite_persistence.py  test_streaming.py  test_tool_invocation.py  test_twitter.py  twitter_cookies.json  verify_output.py
fastapi/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
fastapi/agent_style_transfer/: __init__.py  agent.py  evaluation.py  llm_provider_setup.py  prompt_builder.py  schemas.py
fastapi/agent_style_transfer/evals/: __init__.py  content_preservation.py  platform_appropriateness.py  quality.py  style_fidelity.py  style_inference_accuracy.py  style_rule_usefulness.py
fastapi/agent_style_transfer/utils/: __init__.py  content_extractor.py  evaluation.py  pydantic_utils.py
fastapi/assets/: speaker.wav.se.pt
fastapi/assets/voice_profiles/: 37e1eca1b3.wav.se.pt  profiles.json  sampleuser2_at_gmail_com.wav.se.pt
fastapi/ml/: routes.py  settings.py
fastapi/ml/application/: __init__.py
fastapi/ml/application/agent/: ARCHITECTURE.md  README.md  WALKTHROUGH.md  __init__.py  config.py  create_graph.py  formatters.py  graph.py  helpers.py  intent_router.py  knowledge.py  mention_intelligence.py  nodes.py  schemas.py  server.py  streaming.py  supervisor.py  tools.py  writing_style_inferrer.py
fastapi/ml/application/crawlers/: __init__.py  base.py  cache.py  custom_article.py  dispatcher.py  generate_twitter_cookies.py  github.py  linkedin.py  medium.py  twitter.py
fastapi/ml/application/networks/: embeddings.py
fastapi/ml/application/preprocessing/: dispatchers.py  embedding_data_handlers.py
fastapi/ml/application/preprocessing/operations/: chunking.py
fastapi/ml/application/rag/: self_query.py
fastapi/ml/application/sarge/: __init__.py  engine.py  graph.py  memory.py  nodes.py  openvoice_engine.py  router.py  schemas.py  tts_engine.py
fastapi/ml/application/utils/: split_user_full_name.py
fastapi/ml/experiment/: test_agent_upgrade.py  test_robustness.py
fastapi/ml/infrastructure/db/: qdrant.py  sqlite.py
fastapi/ml/ollama_deep_researcher/: DEEP_RESEARCH_AGENT.md  configuration.py  graph.py  nodes.py  prompts.py  state.py
fastapi/processed/37e1eca1b3_v2_Aam4Bg3+c6bCWHzN/: se.pth
fastapi/processed/sampleuser2_at_gmail_com_v2_nyMqDaeIP+4CFxgO/: se.pth
fastapi/processed/sampleuser2_at_gmail_com_v2_xfGpcda6UmUiAs_^w/: se.pth
fastapi/processed/speaker_v2_YgRcZfgWN3wx_^Apy/: se.pth
fastapi/scripts/: debug_one_case.py  seed_sarge_kb.py  start_mongodb.sh  test_bug_fixes.py  test_complete_workflow.py  test_comprehensive_agent.py  test_elite_sarge.py  test_elite_upgrade.py  test_hyperpersonalization.py  test_latency_quality.py  test_optimization_verification.py  test_quality_checks.py  test_rigorous_hp.py  test_sarge.py  test_sarge_comprehensive.py  test_sarge_final.py  test_sarge_streaming.py  test_turbo_benchmark.py  test_writer.py
(+117 files in other folders)
